# Algorithms

./: .gitignore
AI/Decision_Tree/: main  main.cpp
AI/QLearning/: Makefile  main  main.cpp  q_learning_policy.txt
AI/RuleBasedSystem/: main  main.cpp
AI/kmean-cluster/: customer_clusters.csv  main
Add_Polynomial/: main.cpp
Basic_Algorithm/Cache/: main  main.cpp
Basic_Algorithm/Compiler/: main.cpp
Basic_Algorithm/DoublePointer_C++/: main  main.cpp
Basic_Algorithm/Sliding_windows/: main.cpp
Basic_Algorithm/StaticCodeAnalyzer/: main.cpp
Basic_Algorithm/Virtual_memory_manager/: main
CUDA/Vector_ADD/: main  main.cu
CUDA/threadIDX/: Makefile  main  main.cu
Compiler/: main
ComputerVision/Color_detection/: main  main.cpp
ComputerVision/Color_detection_implementation/: main  main.cpp
ComputerVision/Down_sample/: Makefile  input.png:Zone.Identifier  main  main.cpp
ComputerVision/FastObject_detection/: feature_detector  main.cpp
ComputerVision/Gaussian_blur/: Makefile  main  main.cpp
ComputerVision/Real-time Object Detection/: Makefile  readme
ComputerVision/Sobel_Edge/: main  main.cpp
ComputerVision/Sobel_Edge_full_implementation/: Makefile  main  main.cpp
ComputerVision/movingObject/: main  main.cpp
ComputerVision/movingObjectVideo/: Makefile  main  main.cpp
Concurrency/DBUS/: Makefile  calculator_service  client.cpp
Concurrency/Dining_pilosopher_problem/: main  main.cpp
Concurrency/MQTT/: main  main.cpp
Concurrency/Producer_and_Consumer_queue/: main  main.cpp
Concurrency/Producer_and_Consumer_queue_unsafe/: main  main.cpp
Concurrency/Producer_and_Consumer_queue_unsafe_2/: main  main.cpp
Concurrency/Publisher_subscriber/: main  main.cpp
Concurrency/RPC/: Makefile  client  client.cpp
Concurrency/Single_Linked_list_thread/: main  main.cpp
Concurrency/Thread_pool/: main  main.cpp
Control_Theory/: main
Deep_learning/: main.cpp
Deep_learning/CNN/: CMakeLists.txt  custom-cnn-cpp.cpp  deeplearning-cv-cpp.cpp  main  opencv_wrapper.cpp  opencv_wrapper.h
Xtensor/: main
orb_slam_algorithm/: feature_detector  main.cpp
(+221 files in other folders)
